--- a/db/main.lpc.html
+++ b/db/main.lpc.html
@@ -16,6 +16,102 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >ram_result|altsyncram_component|auto_generated|mux3</TD>
+<TD >165</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ram_result|altsyncram_component|auto_generated|wren_decode_a</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >20</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ram_result|altsyncram_component|auto_generated|rden_decode_b</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >20</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ram_result|altsyncram_component|auto_generated|decode2</TD>
+<TD >6</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >20</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ram_result|altsyncram_component|auto_generated</TD>
+<TD >46</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ram_result</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >rom_image|altsyncram_component|auto_generated|mux5</TD>
 <TD >165</TD>
 <TD >0</TD>
@@ -161,7 +257,7 @@
 </TR>
 <TR >
 <TD >controlador|generarImagen</TD>
-<TD >34</TD>
+<TD >43</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -385,7 +481,7 @@
 </TR>
 <TR >
 <TD >controlador</TD>
-<TD >15</TD>
+<TD >24</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
